[project]
dependencies = [
  "passlib>=1.7.4",
  "pyyaml>=6.0.2",
  "scrapli>=2024.7.30.post1",
  "scrapli-community",
]
description = "Building containers for VM-based Network OSes for Containerlab"
name = "vrnetlab"
readme = "README.md"
requires-python = ">=3.11,<3.13"
version = "0.1.0"

[tool.uv.sources]
scrapli-community = { git = "https://github.com/scrapli/scrapli_community", rev = "d862833" }
